<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ProfileActivity"
    android:background="@drawable/side_nav_bar">
    <de.hdodenhof.circleimageview.CircleImageView
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:id="@+id/profileImage"
        android:src="@mipmap/profiledefault"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="12dp"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/colorOfText"
        android:layout_below="@+id/profileImage"
        android:id="@+id/profileName"
        android:textSize="20dp"
        android:layout_margin="6dp"
        android:gravity="center"
        />
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/pickdob"
        android:layout_below="@+id/profileName"
        android:textColor="@color/colorOfText"
        android:layout_marginHorizontal="20dp"
        android:background="@drawable/buttons_bg"
        android:text="@string/selectBirthday"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/selectGender"
        android:layout_below="@+id/pickdob"
        android:layout_marginTop="12dp"
        android:textColor="@color/colorOfText"
        android:paddingHorizontal="20dp"
        android:textSize="18dp"
        android:id="@+id/selectGenderMessage"
        />

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/selectGenderMessage"
        android:layout_marginTop="12dp"
        android:id="@+id/selectGender"
        android:paddingHorizontal="20dp">
        <RadioButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/male"
            />
        <RadioButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/female"
            />
        <RadioButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/perferNotToSay"
            />
    </RadioGroup>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:layout_below="@+id/selectGender"
        android:layout_marginHorizontal="28dp"
        android:textColor="@color/colorOfText"
        android:text="@string/saveButton"
        android:id="@+id/saveDetails"
        android:background="@drawable/buttons_bg2"
        />
</RelativeLayout>