<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/side_nav_bar"
    android:paddingHorizontal="20dp">

    <!--    <ImageView-->
    <!--        android:id="@+id/imageHome"-->
    <!--        android:layout_width="match_parent"-->
    <!--        android:layout_height="0dp"-->
    <!--        android:visibility="gone"-->
    <!--        android:layout_marginTop="20dp"-->
    <!--        android:src="@mipmap/logo_transparent" />-->

    <!--    <TextView-->
    <!--        android:layout_width="match_parent"-->
    <!--        android:layout_height="wrap_content"-->
    <!--        android:textSize="20dp"-->
    <!--        android:layout_below="@+id/imageHome"-->
    <!--        android:gravity="center_vertical"-->
    <!--        android:text="@string/enterFoodName"-->
    <!--        android:id="@+id/foodNameMessage"-->
    <!--        android:visibility="gone"-->
    <!--        android:textColor="@color/colorOfText"-->
    <!--        android:padding="6dp"/>-->

    <!--   <EditText-->
    <!--       android:layout_width="match_parent"-->
    <!--       android:layout_height="wrap_content"-->
    <!--       android:layout_centerHorizontal="true"-->
    <!--       android:id="@+id/foodName"-->
    <!--       android:layout_below="@+id/foodNameMessage"-->
    <!--       android:background="@drawable/buttons_bg2"-->
    <!--       android:padding="6dp"-->
    <!--       android:visibility="gone"-->
    <!--       android:layout_marginTop="20dp"-->
    <!--       />-->

    <!--    <Button-->
    <!--        android:layout_width="wrap_content"-->
    <!--        android:layout_height="wrap_content"-->
    <!--        android:layout_alignParentRight="true"-->
    <!--        android:background="@drawable/buttons_bg"-->
    <!--        android:layout_below="@+id/foodName"-->
    <!--        android:layout_marginTop="12dp"-->
    <!--        android:visibility="gone"-->
    <!--        android:id="@+id/saveFoodItem"-->
    <!--        android:text="@string/saveFoodItem"-->
    <!--        android:textColor="@color/colorOfText"-->
    <!--        android:padding="8dp"-->
    <!--        />-->

    <!--    <TextView-->
    <!--        android:layout_width="match_parent"-->
    <!--        android:layout_height="wrap_content"-->
    <!--        android:layout_below="@+id/saveFoodItem"-->
    <!--        android:text="@string/enterFoodIngredients"-->
    <!--        android:textSize="20dp"-->
    <!--        android:padding="6dp"-->
    <!--        android:visibility="gone"-->
    <!--        android:id="@+id/foodIngredientsMessage"-->
    <!--        android:gravity="center_vertical"-->
    <!--        android:textColor="@color/colorOfText"-->
    <!--        android:layout_marginTop="12dp"-->
    <!--        />-->

    <!--    <TextView-->
    <!--        android:layout_width="match_parent"-->
    <!--        android:layout_height="wrap_content"-->
    <!--        android:id="@+id/ingredientsListToShow"-->
    <!--        android:layout_below="@id/foodIngredientsMessage"-->
    <!--        android:background="@drawable/buttons_bg"-->
    <!--        android:textColor="@color/colorOfText"-->
    <!--        android:padding="8dp"-->
    <!--        android:textSize="18dp"-->
    <!--        android:visibility="gone"-->
    <!--        />-->
    <!--    <EditText-->
    <!--        android:layout_width="match_parent"-->
    <!--        android:layout_height="wrap_content"-->
    <!--        android:id="@+id/addIngredientsEditText"-->
    <!--        android:layout_below="@+id/ingredientsListToShow"-->
    <!--        android:background="@drawable/buttons_bg2"-->
    <!--        android:padding="6dp"-->
    <!--        android:visibility="gone"-->


    <!--        />-->

    <!--    <Button-->
    <!--        android:layout_width="wrap_content"-->
    <!--        android:layout_height="wrap_content"-->
    <!--        android:layout_alignParentRight="true"-->
    <!--        android:layout_below="@+id/addIngredientsEditText"-->
    <!--        android:background="@drawable/buttons_bg"-->
    <!--        android:layout_marginTop="12dp"-->
    <!--        android:text="@string/AddIngredient"-->
    <!--        android:id="@+id/addIngredientsButton"-->
    <!--        android:padding="8dp"-->
    <!--        android:visibility="gone"-->

    <!--        />-->

    <Button
        android:id="@+id/addIngredientsButtonUsingCamera"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="12dp"
        android:background="@drawable/buttons_bg"
        android:padding="18dp"
        android:text="@string/AddIngredientsUsingCamera"
        android:textColor="@color/colorOfText" />


    <TextView
        android:id="@+id/ingredientListMessage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/addIngredientsButtonUsingCamera"
        android:gravity="center"
        android:padding="12dp"
        android:text="@string/ingredientListMessage"
        android:textColor="@color/colorOfText" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/analyseButton"
        android:layout_below="@+id/ingredientListMessage">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.anychart.AnyChartView
                android:layout_marginTop="12dp"
                android:id="@+id/any_chart_view"
                android:layout_width="match_parent"
                android:layout_height="400dp"
                android:visibility="gone"/>

            <ProgressBar
                android:id="@+id/progress_bar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:visibility="gone"/>

            <TextView
                android:id="@+id/ingredientList"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/any_chart_view"
                android:padding="8dp"
                android:textColor="@color/colorOfText" />
        </RelativeLayout>

    </ScrollView>

    <Button
        android:id="@+id/analyseButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="12dp"
        android:background="@drawable/buttons_bg"
        android:text="@string/AnalyseButton"
        android:textColor="@color/colorOfText" />


</RelativeLayout>